docs: restructure docs/ using the Diataxis framework
Closes #66.

Adds the four Diataxis modes plus two supplementary pages, and trims the
README down to a quickstart that links out instead of duplicating content:

- docs/tutorial.md     — zero to a working program (setup, put/get/delete,
                         options, batch, iterate)
- docs/how-to.md       — 24 task-oriented recipes across the feature surface
- docs/reference.md    — artifacts, API by area, options, enums, feature
                         status (moved out of the README roadmap table)
- docs/explanation.md  — why FFM over JNI, the C-API-only constraint, the
                         NativeObject ownership model, domain types, and the
                         full contents of the deleted native-loading.md
- docs/benchmarks.md   — benchmark table + methodology (moved out of README)
- docs/c-api-gaps.md   — unchanged, now cross-linked from explanation.md

Cross-linking follows the vortex-java convention: how-to → reference for API
detail, how-to/reference → explanation for rationale.

Every Java snippet in tutorial.md and how-to.md was compiled against
core/target/classes before committing.

One correction while moving the roadmap table: it credited a
`CompressionType.getSupportedTypes()` runtime probe that does not exist on
main; the reference entry now describes what is actually there.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>